# Smart-Resume-Analyzer-AWS

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
static/: style.css
templates/: editor.html  index.html
