[project]
name = "resume-score"
version = "0.1.0"
description = "This project is about ATS Score of Resume"
authors = [
    {name = "Harisanth v"}
]
license = {text = "y"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pymupdf (>=1.26.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "language-tool-python (>=2.9.4,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
